# ilastik

./: LICENSE  MyProject.ilp  all_frameworks.txt  all_frameworks_commas.txt  all_frameworks_commas.txt~  altgraph-0.10.2-py2.7.egg  applet_api.html  applet_library.html  clean.sh~  dependencies.html  genindex.html  ilastik.py  index.html  luca.py  macholib-1.5.1-py2.7.egg  modulegraph-0.10.4-py2.7.egg  notes.txt  objFeatDlg.py  objFeatInfo.py  objects.inv  objfeat.py  overview.html  pluginInfo.py  pluginSystem.html  plugin_system.html  projectManager.html  relabel_benchmarks.py  search.html  searchindex.js  setup.py~  stopAtThreshold.py  test.py  test.py~  testing.html  utilities.html  vigraObjFeatures.py  workflow_design.html
.travis_scripts/: build_drtile.sh~
_modules/: index.html
_modules/ilastik/: plugins.html  utility.html  workflow.html
_modules/ilastik/shell/: projectManager.html
_modules/ilastik/utility/: gui.html
docs/: conf.py
docs/_build/doctrees/: applet_api.doctree  applet_library.doctree  dependencies.doctree  (+8 more)
ilastik/: plugins.py
ilastik/applets/counting/cplexwrapper/: CMakeLists.txt  __init__.py  cplexwrapper.c
ilastik/ilastik_logging/: default_config.py  logging_config.json  logging_config.json~
ilastik/widgets/: featureDlg.py  featureTableWidget.py  massFileLoader.py  overlayTreeWidget.py  stackloader.py
ilastik/workflows/: __init__.py~
modules/: index.html
modules/ilastik/: plugins.html  utility.html  workflow.html
py2app-0.7.3-py2.7.egg/EGG-INFO/: SOURCES.txt
tests/: run_each_unit_test.sh~  run_recorded_tests.sh~
(+104 files in other folders)
